--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
         <!-- unfinished dependencies -->
 
     </dependencies>
